--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -77,14 +77,15 @@ body {
   transform: rotate(45deg);
 }
 .nav-container.is-active .nav-items {
-  transform: translate(60vw, 0);
+  transform: translate(calc(100vw - 100%), 0);
+  visibility: visible;
 }
 .nav-container .nav-toggle {
   position: relative;
   width: 20px;
   height: 20px;
   margin: 10px;
-  z-index: 902;
+  z-index: 1000;
 }
 .nav-container .nav-toggle:hover {
   cursor: pointer;
@@ -97,27 +98,28 @@ body {
   transform: translate(0, 0);
   width: 100%;
   height: 2px;
-  background: var(--dark-pink);
+  background: #fff;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .nav-container .nav-toggle:before {
-  box-shadow: 0 6.6666666667px 0 0 var(--dark-pink);
+  box-shadow: 0 6.6666666667px 0 0 #fff;
 }
 .nav-container .nav-toggle:after {
-  box-shadow: 0 -6.6666666667px 0 0 var(--dark-pink);
+  box-shadow: 0 -6.6666666667px 0 0 #fff;
 }
 .nav-container .nav-items {
   position: absolute;
+  visibility: hidden;
   overflow: hidden;
   top: 0;
   left: 0;
   height: 100vh;
-  width: 40vw;
-  z-index: 901;
+  min-width: 260px;
+  z-index: 999;
   padding: 80px 20px 20px 10px;
   transition: transform 0.3s ease;
   transform: translate(100vw, 0);
-  background: #EFEFEF;
+  background: #E17992;
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 5px 0;
@@ -125,13 +127,102 @@ body {
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
 }
 .nav-container .nav-items .nav-item {
-  background: #e2e2e2;
-  padding: 10px;
+  padding: 15px;
   transition: background-color 0.3s ease;
 }
 .nav-container .nav-items .nav-item:hover {
   cursor: pointer;
-  background: #d6d6d6;
+}
+
+@media screen and (min-width: 480px) {
+  .nav-container .nav-items {
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    min-width: 260px;
+    z-index: 999;
+    padding: 80px 20px 20px 10px;
+    transition: transform 0.3s ease;
+    transform: translate(100vw, 0);
+    background: #E17992;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 5px 0;
+    align-content: start;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
+  }
+  .nav-container .nav-items .nav-item {
+    padding: 15px;
+    transition: background-color 0.3s ease;
+  }
+  .nav-container .nav-items .nav-item:hover {
+    cursor: pointer;
+  }
+}
+@media screen and (min-width: 480px) {
+  .nav-container .nav-toggle {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    margin: 10px;
+    z-index: 1000;
+  }
+  .nav-container .nav-toggle:hover {
+    cursor: pointer;
+  }
+  .nav-container .nav-toggle:before, .nav-container .nav-toggle:after {
+    content: "";
+    position: absolute;
+    top: 20px;
+    left: -40%;
+    transform: translate(-33vw, 30px);
+    width: 100%;
+    height: 2px;
+    background: #D41443;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .nav-container .nav-toggle:before {
+    box-shadow: 0 6.6666666667px 0 0 #D41443;
+  }
+  .nav-container .nav-toggle:after {
+    box-shadow: 0 -6.6666666667px 0 0 #D41443;
+  }
+}
+.nav-items__button {
+  width: 209px;
+  height: 44px;
+  border-radius: 22px;
+  background-color: #fff;
+  border: none;
+  margin: 0 auto;
+}
+
+.nav-items__buy {
+  color: #D41443;
+  font-family: "Titan One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 30px;
+  letter-spacing: 0.04em;
+  text-decoration: none;
+}
+
+.nav-item__anchor {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  text-decoration: none;
+  color: #fff;
+  background-color: transparent;
+}
+
+.nav-item__anchor:hover {
+  color: #D41443;
 }
 
 .hero-header {
@@ -171,6 +262,8 @@ body {
     height: 50px;
     padding-left: 20px;
     padding-top: 36px;
+    position: relative;
+    z-index: 901;
   }
 }
 .header-top__buy {
@@ -180,12 +273,16 @@ body {
 @media screen and (min-width: 480px) {
   .header-top__buy {
     display: inline-block;
-    width: 209px;
+    width: 160px;
     height: 44px;
     border-radius: 22px;
     background-color: #fff;
     border: none;
     margin: 0 auto;
+    position: absolute;
+    top: 38px;
+    right: 1%;
+    z-index: 900;
   }
 }
 .header-top__buylink {
@@ -196,11 +293,11 @@ body {
   .header-top__buylink {
     display: inline-block;
     color: #D41443;
-    font-family: "Titan One";
+    font-family: "DM Sans";
     font-style: normal;
-    font-weight: 400;
-    font-size: 26px;
-    line-height: 30px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
     letter-spacing: 0.04em;
     text-decoration: none;
   }
@@ -291,6 +388,86 @@ body {
   color: #fff;
 }
 
+.hero-header__eat {
+  display: none;
+}
+
+@media screen and (min-width: 480px) {
+  .hero-header__eat {
+    position: relative;
+    display: flex;
+  }
+}
+@media screen and (min-width: 480px) {
+  .header-eat__number {
+    font-family: "Titan One";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 32px;
+    text-align: right;
+    letter-spacing: 0.04em;
+    color: #D41443;
+    position: absolute;
+    z-index: 900;
+    bottom: 160px;
+    right: 25px;
+    width: 35px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .--cafes {
+    margin-bottom: 50px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .header-eat__span {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 10px;
+    letter-spacing: normal;
+    text-align: right;
+    color: #fff;
+    position: absolute;
+    left: 0;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 480px) {
+  .--trucks-span {
+    width: 55px;
+    text-align: left;
+    margin-left: -7px;
+  }
+}
+.cafe-circle {
+  display: none;
+}
+
+@media screen and (min-width: 480px) {
+  .cafe-circle {
+    position: absolute;
+    top: 0px;
+    right: -1vw;
+    display: flex;
+    z-index: -1;
+  }
+}
+.truck-circle {
+  display: none;
+}
+
+@media screen and (min-width: 480px) {
+  .truck-circle {
+    position: absolute;
+    top: 0px;
+    right: -1vw;
+    display: flex;
+    z-index: -1;
+  }
+}
 .hero-header__icediv {
   position: absolute;
   background-image: url("/images/elipse-mobile.png");
@@ -350,7 +527,7 @@ body {
     position: absolute;
     z-index: 920;
     right: 2%;
-    top: 265px;
+    top: 266px;
   }
 }
 .nav-container {
@@ -371,6 +548,7 @@ body {
 }
 .nav-container.is-active .nav-items {
   transform: translate(calc(100vw - 100%), 0);
+  visibility: visible;
 }
 .nav-container .nav-toggle {
   position: relative;
@@ -401,10 +579,11 @@ body {
 }
 .nav-container .nav-items {
   position: absolute;
+  visibility: hidden;
   overflow: hidden;
   top: 0;
   left: 0;
-  height: 502px;
+  height: 100vh;
   min-width: 260px;
   z-index: 999;
   padding: 80px 20px 20px 10px;
@@ -454,8 +633,31 @@ body {
 }
 @media screen and (min-width: 480px) {
   .nav-container .nav-toggle {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    margin: 10px;
+    z-index: 1000;
+  }
+  .nav-container .nav-toggle:hover {
+    cursor: pointer;
+  }
+  .nav-container .nav-toggle:before, .nav-container .nav-toggle:after {
+    content: "";
     position: absolute;
-    right: 0;
+    top: 20px;
+    left: -40%;
+    transform: translate(-33vw, 30px);
+    width: 100%;
+    height: 2px;
+    background: #D41443;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .nav-container .nav-toggle:before {
+    box-shadow: 0 6.6666666667px 0 0 #D41443;
+  }
+  .nav-container .nav-toggle:after {
+    box-shadow: 0 -6.6666666667px 0 0 #D41443;
   }
 }
 .nav-items__button {
