--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -33,6 +33,13 @@
     </section>
 <!-- buttons -->
 
+<!-- food trucks cafes -->
+<section class="hero-header__eat header-eat">
+<div class="header-eat__number --cafes"><p>16</p><span class="header-eat__span">cafes</span><img class="cafe-circle" src="../src/images/number-circle.png"> </div>
+<div class="header-eat__number --foodtrucks"><p>23</p><span class="header-eat__span --trucks-span">food trucks</span><img class="truck-circle" src="../src/images/number-circle.png"></div>
+</section>
+<!-- food trucks cafes -->
+
 <!-- imgs-->
 <section class="hero-header__images">
     <div class="hero-header__icediv"><img class=header-bottom__icecream src="../src/images/lód-header.png"></div>
