--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -36,6 +36,8 @@
         height: 50px;
         padding-left: 20px;
         padding-top: 36px;
+        position: relative;
+        z-index: 901;
     }
 }
 
@@ -46,12 +48,16 @@
 @media screen and(min-width: 480px) {
     .header-top__buy {
         display: inline-block;
-        width: 209px;
+        width: 160px;
         height: 44px;
         border-radius: 22px;
         background-color: #fff;
         border: none;
         margin: 0 auto;
+        position: absolute;
+        top: 38px;
+        right: 1%;
+        z-index: 900;
     }
 }
 
@@ -63,11 +69,11 @@
     .header-top__buylink {
         display: inline-block;
         color: #D41443;
-        font-family: 'Titan One';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 26px;
-        line-height: 30px;
+font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
         letter-spacing: 0.04em;
         text-decoration: none;
     }
@@ -160,6 +166,89 @@
     color: #fff;
 }
 
+.hero-header__eat{
+    display: none;
+}
+
+@media screen and(min-width: 480px) {
+.hero-header__eat{
+position: relative;
+display: flex;
+}}
+
+@media screen and(min-width: 480px) {
+.header-eat__number{
+font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 32px;
+    text-align: right;
+    letter-spacing: 0.04em;
+    color: #D41443;
+    position: absolute;
+    z-index: 900;
+    bottom: 160px;
+right: 25px;
+width: 35px;
+}}
+
+@media screen and(min-width: 480px) {
+.--cafes{
+    margin-bottom: 50px;
+}}
+
+@media screen and(min-width: 480px) {
+.header-eat__span{
+font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 10px;
+    letter-spacing: normal;
+    text-align: right;
+    color: #fff;
+    position: absolute;
+    left: 0;
+    width: 100%;
+}}
+
+@media screen and(min-width: 480px) {
+.--trucks-span{
+        width: 55px;
+        text-align: left;
+        margin-left: -7px;
+}}
+
+.cafe-circle{
+    display: none;
+}
+
+@media screen and(min-width: 480px) {}
+@media screen and(min-width: 480px) {
+    .cafe-circle{
+        position: absolute;
+        top: 0px;
+        right: -1vw;
+        display: flex;
+        z-index: -1;
+    }
+}
+
+.truck-circle{
+    display: none;
+}
+
+@media screen and(min-width: 480px) {
+    .truck-circle {
+        position: absolute;
+        top: 0px;
+        right: -1vw;
+        display: flex;
+        z-index: -1;
+    }
+}
+
 .hero-header__icediv {
     position: absolute;
     background-image: url("/images/elipse-mobile.png");
@@ -170,7 +259,6 @@
     left: 30vw;
 }
 
-@media screen and(min-width: 480px) {}
 
 @media screen and(min-width: 480px) {
     .hero-header__icediv {
@@ -224,6 +312,6 @@
         position: absolute;
         z-index: 920;
         right: 2%;
-        top: 265px;
+        top: 266px;
     }
 }
