--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -8,14 +8,14 @@
     <li class="product__item">
         <div class="product-square__item --product-pink">
             <div class="test">
-            <img class ="test2" src="./images/pic-pink.320px1x.jpg"
+            <img class ="test2" src="./images/pink.320px.1x.png"
             srcset="
-            ./images/pic-pink.320px1x.jpg 450w,
-            ./images/pic-pink.320px2x.jpg 900w,
-            ./images/pic-pink.768px@1x.jpg 354,
-            ./images/pic-pink.768px@2x.jpg 708w,
-            ./images/pic-pink.768px@1x.jpg 270w,
-            ./images/pic-pink1200px@2x.jpg 520w
+            ./images/pink.320px.1x.png 450w,
+            ./images/pink.320px.2x.png 900w,
+            ./images/pink.768px.1x.png 354,
+            ./images/pink.768px.2x.png 708w,
+            ./images/pink.1200px.1x.png 270w,
+            ./images/pink.1200px2x.png 520w
              "
              alt="IceCreamPink"
              sizes="(min-width: 1200px) 270px,(min-width: 768px) calc(50vw - 30px), (min-width: 320px) calc(100vw - 30px)" >
@@ -28,7 +28,19 @@
     </li>
     <li class="product__item">
     <div class="product-square__item --product-yellow">
-       
+        <div class="test">
+            <img class ="test2" src="./images/yellow.320px1x.png"
+            srcset="
+            ./images/yellow.320px1x.png 450w,
+            ./images/yellow.320px2x.png 900w,
+            ./images/yellow.768px.1x.png 354,
+            ./images/yellow.768px.2x.png 708w,
+            ./images/yellow.1200px.1x.png 270w,
+            ./images/yellow.1200px.2x.png 520w
+             "
+             alt="IceCreamPink"
+             sizes="(min-width: 1200px) 270px,(min-width: 768px) calc(50vw - 30px), (min-width: 320px) calc(100vw - 30px)" >
+            </div>
         <p class="product-item__heading"> <b>ICE COFFE</b></p>
         <p class="product-item__heading"><b> ...</b></p>
         <p class="product-item__paragraf">Lorem ipsum dolor sit amet,consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et </p>
@@ -37,6 +49,19 @@
     </li>
     <li class="product__item">
     <div class="product-square__item --product-green">
+        <div class="test">
+            <img class ="test2" src="./images/green.320px1x.png"
+            srcset="
+            ./images/green.320px1x.png 450w,
+            ./images/green.320px2x.png900w,
+            ./images/green.768px1x.png 354,
+            ./images/green.768px2x.png 708w,
+            ./images/green.1200px.1x.png 270w,
+            ./images/green.1200px.2x.png 520w
+             "
+             alt="IceCreamPink"
+             sizes="(min-width: 1200px) 270px,(min-width: 768px) calc(50vw - 30px), (min-width: 320px) calc(100vw - 30px)" >
+            </div>
       <p class="product-item__heading"><b> MILKSHAKES</b></p>
       <p class="product-item__heading"><b> ...</b></p>
        <p class="product-item__paragraf">Lorem ipsum dolor sit amet,consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et </p>
