poprawka szerokosci menu mobilnego

--- a/src/sass/_hamburger/_hamburger.scss
+++ b/src/sass/_hamburger/_hamburger.scss
@@ -117,7 +117,7 @@ $toggleColor: #fff;
         top: 0;
         left: 0;
         height: 100vh;
-        min-width: 260px;
+        width: 254px;
         z-index: 999;
         padding: 80px 20px 20px 10px;
         transition: transform .3s ease;
