--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -8,14 +8,14 @@
     <li class="product__item">
         <div class="product-square__item --product-pink">
             <div class="test">
-            <img class ="test2" src="./images/pink.320px.1x.png"
+            <img class ="product-margin_pic" src="./images/pink.320px.1x.png"
             srcset="
             ./images/pink.320px.1x.png 450w,
             ./images/pink.320px.2x.png 900w,
             ./images/pink.768px.1x.png 354,
             ./images/pink.768px.2x.png 708w,
             ./images/pink.1200px.1x.png 270w,
-            ./images/pink.1200px2x.png 520w
+            ./images/pink1200px2x.png 520w
              "
              alt="IceCreamPink"
              sizes="(min-width: 1200px) 270px,(min-width: 768px) calc(50vw - 30px), (min-width: 320px) calc(100vw - 30px)" >
@@ -53,7 +53,7 @@
             <img class ="test2" src="./images/green.320px1x.png"
             srcset="
             ./images/green.320px1x.png 450w,
-            ./images/green.320px2x.png900w,
+            ./images/green.320px2x.png 900w,
             ./images/green.768px1x.png 354,
             ./images/green.768px2x.png 708w,
             ./images/green.1200px.1x.png 270w,
