--- a/src/sass/products/_products-heading.SCSS
+++ b/src/sass/products/_products-heading.SCSS
@@ -2,11 +2,14 @@
     text-align: center;
     font-size: 18px;
     color: var(--light-pink);
+    
 }
 
 .products-first__heading {
     text-align: center;
+    position:relative;
     font-size:34px;
     color: var(--dark-pink);
+    margin-bottom: 31px;
 }
 
