--- a/src/sass/products/_products-list.scss
+++ b/src/sass/products/_products-list.scss
@@ -41,7 +41,7 @@
   text-align: center;
   color: var(--text-color);
 }
-.test {
+.product-background__radius_pink {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,12 +49,41 @@
     width: 230px;
     height: 230px;
     margin-left: 10px;
+}
     
-    border-radius: 50%;
-    background-color: rgb(248,140,165);
+    // border-radius: 50%;
+    // background-color: rgb(248,140,165);
+  
+  .product-background__radius_yellow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    width: 230px;
+    height: 230px;
+    margin-left: 10px;
   }
-  .test2{
-    margin-top: -95px;
+    
+  //   border-radius: 50%;
+  //   background-color: rgb(248,140,165);
+  // 
+
+  .product-background__radius_green {
+   align-items: center;
+    width: 230px;
+    height: 230px;
+    margin-left: 10px;
+    
+
+   
+  }
+  .product-margin_pic{
+   
+    margin-top: -115px;
+    padding-top: 40px;
+    margin-left: 15px;
+    margin-right: 15px;
+
   }
 
   .product_radius {
