--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,7 +4,7 @@
     <h1 class="products-first__heading "> PRODUCTS</h1>
 </div>
 <ul>
-    <div>
+    <!-- <div> -->
     <li class="product__item">
         <div class="product-square__item --product-pink">
             <div class="test">
@@ -22,19 +22,19 @@
             </div>
         <p class="product-item__heading"><b>ICE CREAM </b></p>
         <p class="product-item__heading"><b> ...</b></p>
-        <p class="product-item__paragraf">Lorem ipsum dolor sit amet,>consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et </p>
+        <p class="product-item__paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
         <img class="product_radius" src="./images/strzałka.jpg">
-    </div>
+    <!-- </div> -->
     </li>
     <li class="product__item">
     <div class="product-square__item --product-yellow">
         <div class="test">
-            <img class ="test2" src="./images/yellow.320px1x.png"
+            <img class ="product-margin_pic" src="./images/yellow.320px1x.png"
             srcset="
             ./images/yellow.320px1x.png 450w,
             ./images/yellow.320px2x.png 900w,
             ./images/yellow.768px.1x.png 354,
-            ./images/yellow.768px.2x.png 708w,
+            ./images/yellow.768px.2x..png 708w,
             ./images/yellow.1200px.1x.png 270w,
             ./images/yellow.1200px.2x.png 520w
              "
@@ -43,14 +43,14 @@
             </div>
         <p class="product-item__heading"> <b>ICE COFFE</b></p>
         <p class="product-item__heading"><b> ...</b></p>
-        <p class="product-item__paragraf">Lorem ipsum dolor sit amet,consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et </p>
+        <p class="product-item__paragraf">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
         <img class="product_radius" src="./images/strzałka.jpg">
     </div>
     </li>
     <li class="product__item">
     <div class="product-square__item --product-green">
         <div class="test">
-            <img class ="test2" src="./images/green.320px1x.png"
+            <img class ="product-margin_pic" src="./images/green.320px1x.png"
             srcset="
             ./images/green.320px1x.png 450w,
             ./images/green.320px2x.png 900w,
