--- a/src/sass/products/_products-heading.SCSS
+++ b/src/sass/products/_products-heading.SCSS
@@ -1,7 +1,10 @@
 .products-second__heading {
     text-align: center;
     font-size: 18px;
+    font-family: "Titan One";
     color: var(--light-pink);
+    margin-bottom: 15px;
+    margin-top: 100px;
     
 }
 
@@ -11,5 +14,7 @@
     font-size:34px;
     color: var(--dark-pink);
     margin-bottom: 31px;
+    font-family: "Titan One";
+   
 }
 
