--- a/src/sass/products/_products-list.scss
+++ b/src/sass/products/_products-list.scss
@@ -1,8 +1,10 @@
 .product-square__item {
-  // position: absolute;
+
   width: 280px;
   height: 485px;
   border-radius: 24px;
+  margin-top: 143px;
+
 }
 .--product-pink {
   background-color: var(--product-pink);
@@ -23,17 +25,18 @@
 }
 
 .product-item__heading {
-  font-family: 'Titan One';
+  font-family: "Titan One";
   font-weight: 400;
   font-size: 20px;
   line-height: 22.9px;
   letter-spacing: 4%;
   text-align: center;
   color: var(--text-color);
+  margin-bottom: 33px;
 }
 
 .product-item__paragraf {
-  font-family: 'DM Sans';
+  font-family: "DM Sans";
   font-weight: 700;
   font-size: 14px;
   line-height: 21.28px;
@@ -79,16 +82,25 @@
   }
   .product-margin_pic{
    
-    margin-top: -115px;
-    padding-top: 40px;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-top: -159px;
+    padding-top: 31px;
+    // margin-left: 15px;
+    // margin-right: 15px;
+    width: 100%;
+    margin-bottom: 31px;
 
   }
-
+.test {
+  display: flex;
+  justify-content: center;
+}
   .product_radius {
     border-radius: 50%;
-  }
+    margin-top: 41px;
+    margin-bottom: 41px;
+    margin-left: 120px;
+    margin-right: 120px;
+    ; }
 
 // .product-pink__background {
 //     background-image: linear-gradient url(../images/pic-pink.320px1x.jpg);
