--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,10 +1,9 @@
-<section>
+<section class="container">
     <div>
    <h2 class="products-second__heading"> 100% NATURAL</h2>
     <h1 class="products-first__heading "> PRODUCTS</h1>
 </div>
-<ul>
-    <!-- <div> -->
+<ul class="product__list">
     <li class="product__item">
         <div class="product-square__item --product-pink">
             <div class="test">
@@ -69,6 +68,6 @@
     </div>
     </li>
 </ul>
-</div>
+<!-- </div> -->
 
 </section>
