--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -105,7 +105,7 @@ ol {
 }
 
 .product-square__item {
-  width: 280px;
+  width: 100%;
   height: 485px;
   border-radius: 24px;
   margin-top: 143px;
@@ -124,8 +124,8 @@ ol {
 }
 
 .product__item {
-  padding-left: 20px;
-  padding-right: 20px;
+  display: flex;
+  width: 100%;
 }
 
 .product-foto__heading {
@@ -153,35 +153,8 @@ ol {
   color: var(--text-color);
 }
 
-.product-background__radius_pink {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  width: 230px;
-  height: 230px;
-  margin-left: 10px;
-}
-
-.product-background__radius_yellow {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  width: 230px;
-  height: 230px;
-  margin-left: 10px;
-}
-
-.product-background__radius_green {
-  align-items: center;
-  width: 230px;
-  height: 230px;
-  margin-left: 10px;
-}
-
 .product-margin_pic {
-  margin-top: -159px;
+  margin-top: -158px;
   padding-top: 31px;
   width: 100%;
   margin-bottom: 31px;
@@ -198,4 +171,24 @@ ol {
   margin-bottom: 41px;
   margin-left: 120px;
   margin-right: 120px;
+  display: flex;
+}
+
+@media screen and (min-width: 768px) {
+  .product__list {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 20px;
+    width: calc((100% - 30px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .product__list {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 20px;
+    width: calc((100% - 30px) / 3);
+  }
 }/*# sourceMappingURL=main.css.map */
