--- a/src/sass/products/_products-list.scss
+++ b/src/sass/products/_products-list.scss
@@ -1,9 +1,10 @@
 .product-square__item {
 
-  width: 280px;
+  width: 100%;
   height: 485px;
   border-radius: 24px;
   margin-top: 143px;
+  
 
 }
 .--product-pink {
@@ -16,8 +17,10 @@
   background-color: var(--product-green);
 }
 .product__item {
-  padding-left: 20px;
-  padding-right: 20px;
+  // padding-left: 20px;
+  // padding-right: 20px;
+  display: flex;
+  width: 100%;
 }
 
 .product-foto__heading {
@@ -44,45 +47,10 @@
   text-align: center;
   color: var(--text-color);
 }
-.product-background__radius_pink {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    width: 230px;
-    height: 230px;
-    margin-left: 10px;
-}
-    
-    // border-radius: 50%;
-    // background-color: rgb(248,140,165);
-  
-  .product-background__radius_yellow {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    width: 230px;
-    height: 230px;
-    margin-left: 10px;
-  }
-    
-  //   border-radius: 50%;
-  //   background-color: rgb(248,140,165);
-  // 
 
-  .product-background__radius_green {
-   align-items: center;
-    width: 230px;
-    height: 230px;
-    margin-left: 10px;
-    
-
-   
-  }
   .product-margin_pic{
    
-    margin-top: -159px;
+    margin-top: -158px;
     padding-top: 31px;
     // margin-left: 15px;
     // margin-right: 15px;
@@ -100,18 +68,27 @@
     margin-bottom: 41px;
     margin-left: 120px;
     margin-right: 120px;
-    ; }
+    display: flex;
+    
+  
+     }
 
-// .product-pink__background {
-//     background-image: linear-gradient url(../images/pic-pink.320px1x.jpg);
+    @media screen and (min-width: 768px) {
+      .product__list {
+         display: flex;
+        justify-content: space-between;
+        width: 100%;
+        gap: 20px;
+        width: calc((100% - 30px)/3);
+      }
+  }
 
-//     // background-image: linear-gradient url(C:\Users\Piotr\Documents\GitHub\grupa-7\src\images\pic-products1.jpg);
-//   }
-
-//   .product-yellow__background {
-//     background-image: linear-gradient url(C:\Users\Piotr\Documents\GitHub\grupa-7\src\images\pic-products2.jpg);
-//   }
-
-//   .product-green__background {
-//     background-image: linear-gradient url(C:\Users\Piotr\Documents\GitHub\grupa-7\src\images\pic-products3.jpg);
-//   }
+  @media screen and (min-width: 1200px) {
+    .product__list {
+       display: flex;
+      justify-content: space-between;
+      width: 100%;
+      gap: 20px;
+      width: calc((100% - 30px)/3);
+    }
+}
