--- a/src/sass/products/_products-list.scss
+++ b/src/sass/products/_products-list.scss
@@ -1,8 +1,11 @@
 .product-square__item {
-  // position: absolute;
-  width: 280px;
+
+  width: 100%;
   height: 485px;
   border-radius: 24px;
+  margin-top: 143px;
+  
+
 }
 .--product-pink {
   background-color: var(--product-pink);
@@ -14,8 +17,10 @@
   background-color: var(--product-green);
 }
 .product__item {
-  padding-left: 20px;
-  padding-right: 20px;
+  // padding-left: 20px;
+  // padding-right: 20px;
+  display: flex;
+  width: 100%;
 }
 
 .product-foto__heading {
@@ -23,17 +28,18 @@
 }
 
 .product-item__heading {
-  font-family: 'Titan One';
+  font-family: "Titan One";
   font-weight: 400;
   font-size: 20px;
   line-height: 22.9px;
   letter-spacing: 4%;
   text-align: center;
   color: var(--text-color);
+  margin-bottom: 33px;
 }
 
 .product-item__paragraf {
-  font-family: 'DM Sans';
+  font-family: "DM Sans";
   font-weight: 700;
   font-size: 14px;
   line-height: 21.28px;
@@ -41,36 +47,48 @@
   text-align: center;
   color: var(--text-color);
 }
-.test {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    width: 230px;
-    height: 230px;
-    margin-left: 10px;
-    
-    border-radius: 50%;
-    background-color: rgb(248,140,165);
-  }
-  .test2{
-    margin-top: -95px;
-  }
 
+  .product-margin_pic{
+   
+    margin-top: -158px;
+    padding-top: 31px;
+    // margin-left: 15px;
+    // margin-right: 15px;
+    width: 100%;
+    margin-bottom: 31px;
+
+  }
+.test {
+  display: flex;
+  justify-content: center;
+}
   .product_radius {
     border-radius: 50%;
+    margin-top: 41px;
+    margin-bottom: 41px;
+    margin-left: 120px;
+    margin-right: 120px;
+    display: flex;
+    
+  
+     }
+
+    @media screen and (min-width: 768px) {
+      .product__list {
+         display: flex;
+        justify-content: space-between;
+        width: 100%;
+        gap: 20px;
+        width: calc((100% - 30px)/3);
+      }
   }
 
-// .product-pink__background {
-//     background-image: linear-gradient url(../images/pic-pink.320px1x.jpg);
-
-//     // background-image: linear-gradient url(C:\Users\Piotr\Documents\GitHub\grupa-7\src\images\pic-products1.jpg);
-//   }
-
-//   .product-yellow__background {
-//     background-image: linear-gradient url(C:\Users\Piotr\Documents\GitHub\grupa-7\src\images\pic-products2.jpg);
-//   }
-
-//   .product-green__background {
-//     background-image: linear-gradient url(C:\Users\Piotr\Documents\GitHub\grupa-7\src\images\pic-products3.jpg);
-//   }
+  @media screen and (min-width: 1200px) {
+    .product__list {
+       display: flex;
+      justify-content: space-between;
+      width: 100%;
+      gap: 20px;
+      width: calc((100% - 30px)/3);
+    }
+}
