dodanie lorem ipsum i zdjecia strzalki

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -45,7 +45,10 @@
     <div class="hero-header__icediv"><img class=header-bottom__icecream src="../src/images/lód-header.png"></div>
 <div class="hero-header__milkdiv"><img class=header-bottom__milk src="../src/images/milk.png"></div>
 <div class="hero-header__tastydiv"><img class=header-bottom__tasty src="../src/images/tasty.png"></div>
-
 </section>
     <!-- imgs -->
+    <div class="rodzic">
+    <span class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</span>
+<img src="../src/images/arrow.png">
+</div>
 </header>
