customer reviews up

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,6 +1,8 @@
 <section class="slick">
   <div class="container slick__container">
-    <h2 class="slick__title visually-hidden" id="customer-reviews">Customer reviews</h2>
+    <h2 class="slick__title visually-hidden" id="customer-reviews">
+      Customer reviews Rafał Pawlak
+    </h2>
     <ul class="slick__slider">
       <li class="slick__item">
         <img
