--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -54,10 +54,10 @@ body {
     width: 768px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .container {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1280px;
   }
 }
 
@@ -118,7 +118,7 @@ body {
   top: 0;
   left: 0;
   height: 502px;
-  width: 100%;
+  width: 60%;
   z-index: 999;
   padding: 80px 20px 20px 10px;
   transition: transform 0.3s ease;
@@ -138,14 +138,14 @@ body {
   cursor: pointer;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .nav-container .nav-items {
     position: absolute;
     overflow: hidden;
     top: 0;
     left: 0;
     height: 100vh;
-    min-width: 260px;
+    width: 254px;
     z-index: 999;
     padding: 80px 20px 20px 10px;
     transition: transform 0.3s ease;
@@ -165,7 +165,7 @@ body {
     cursor: pointer;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .nav-container .nav-toggle {
     position: relative;
     width: 20px;
@@ -181,7 +181,7 @@ body {
     position: absolute;
     top: 20px;
     left: -40%;
-    transform: translate(-33vw, 30px);
+    transform: translate(calc(-1400% + 9vw), 30px);
     width: 100%;
     height: 2px;
     background: #D41443;
@@ -201,17 +201,36 @@ body {
   background-color: #fff;
   border: none;
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .nav-items__buy {
   color: #D41443;
-  font-family: "Titan One";
+  font-family: "DM Sans";
   font-style: normal;
-  font-weight: 400;
-  font-size: 26px;
-  line-height: 30px;
-  letter-spacing: 0.04em;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.nav-items__marker {
+  color: #D41443;
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  text-decoration: none;
+  display: inline-block;
+  padding-left: 8px;
 }
 
 .nav-item__anchor {
@@ -238,7 +257,7 @@ body {
   width: 100%;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .hero-header {
     display: flex;
     flex-direction: column;
@@ -260,7 +279,7 @@ body {
   padding-top: 6px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .header-top__logo {
     width: 199px;
     height: 50px;
@@ -274,7 +293,7 @@ body {
   display: none;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .header-top__buy {
     display: inline-block;
     width: 160px;
@@ -293,7 +312,7 @@ body {
   display: none;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .header-top__buylink {
     display: inline-block;
     color: #D41443;
@@ -339,7 +358,7 @@ body {
   bottom: 110px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .hero-header__buttons {
     position: relative;
     bottom: 65px;
@@ -396,13 +415,13 @@ body {
   display: none;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .hero-header__eat {
     position: relative;
     display: flex;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .header-eat__number {
     font-family: "Titan One";
     font-style: normal;
@@ -419,12 +438,12 @@ body {
     width: 35px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .--cafes {
     margin-bottom: 50px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .header-eat__span {
     font-family: "DM Sans";
     font-style: normal;
@@ -439,7 +458,7 @@ body {
     width: 100%;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .--trucks-span {
     width: 55px;
     text-align: left;
@@ -450,7 +469,7 @@ body {
   display: none;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .cafe-circle {
     position: absolute;
     top: 0px;
@@ -463,7 +482,7 @@ body {
   display: none;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .truck-circle {
     position: absolute;
     top: 0px;
@@ -477,20 +496,20 @@ body {
   background-image: url("/images/elipse-mobile.png");
   background-size: 344px;
   background-repeat: no-repeat;
-  width: 100vw;
+  width: 67vw;
   top: 100px;
   left: 30vw;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .hero-header__icediv {
     position: absolute;
     background-image: url("/images/elipse-mobile.png");
-    background-size: 344px;
+    background-size: 324px;
     background-repeat: no-repeat;
-    width: 100vw;
+    width: 50vw;
     top: 30px;
-    left: 30vw;
+    left: 40vw;
   }
 }
 .header-bottom__icecream {
@@ -500,7 +519,7 @@ body {
   margin-top: -8px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .header-bottom__icecream {
     width: 143px;
     height: 336px;
@@ -512,7 +531,7 @@ body {
   display: none;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .hero-header__milkdiv {
     display: inline-block;
     position: absolute;
@@ -525,7 +544,7 @@ body {
   display: none;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .hero-header__tastydiv {
     display: inline-block;
     position: absolute;
@@ -591,7 +610,7 @@ body {
   top: 0;
   left: 0;
   height: 502px;
-  width: 100%;
+  width: 60%;
   z-index: 999;
   padding: 80px 20px 20px 10px;
   transition: transform 0.3s ease;
@@ -611,14 +630,14 @@ body {
   cursor: pointer;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .nav-container .nav-items {
     position: absolute;
     overflow: hidden;
     top: 0;
     left: 0;
     height: 100vh;
-    min-width: 260px;
+    width: 254px;
     z-index: 999;
     padding: 80px 20px 20px 10px;
     transition: transform 0.3s ease;
@@ -638,7 +657,7 @@ body {
     cursor: pointer;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 767px) {
   .nav-container .nav-toggle {
     position: relative;
     width: 20px;
@@ -654,7 +673,7 @@ body {
     position: absolute;
     top: 20px;
     left: -40%;
-    transform: translate(-33vw, 30px);
+    transform: translate(calc(-1400% + 9vw), 30px);
     width: 100%;
     height: 2px;
     background: #D41443;
@@ -674,17 +693,36 @@ body {
   background-color: #fff;
   border: none;
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .nav-items__buy {
   color: #D41443;
-  font-family: "Titan One";
+  font-family: "DM Sans";
   font-style: normal;
-  font-weight: 400;
-  font-size: 26px;
-  line-height: 30px;
-  letter-spacing: 0.04em;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.nav-items__marker {
+  color: #D41443;
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  text-decoration: none;
+  display: inline-block;
+  padding-left: 8px;
 }
 
 .nav-item__anchor {
