widok desktopu/poprawki

--- a/src/sass/_hamburger/_hamburger.scss
+++ b/src/sass/_hamburger/_hamburger.scss
@@ -178,6 +178,13 @@ $toggleColor: #fff;
     }
 }
 
+@media screen and(min-width: 1200px) {
+    .nav-container{
+        display: none;
+    }
+}
+
+
 
 .nav-items__button {
     width: 209px;
