--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -193,6 +193,11 @@ body {
     box-shadow: 0 -6.6666666667px 0 0 #D41443;
   }
 }
+@media screen and (min-width: 1200px) {
+  .nav-container {
+    display: none;
+  }
+}
 .nav-items__button {
   width: 209px;
   height: 44px;
@@ -266,6 +271,16 @@ body {
     width: 100%;
   }
 }
+@media screen and (min-width: 1200px) {
+  .hero-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: var(--product-pink);
+    height: 665px;
+    width: 100%;
+  }
+}
 .header-top {
   display: flex;
   justify-content: space-between;
@@ -288,6 +303,44 @@ body {
     z-index: 901;
   }
 }
+@media screen and (min-width: 1200px) {
+  .header-top__logo {
+    width: 199px;
+    height: 50px;
+    padding-left: 46px;
+    padding-top: 37px;
+    position: relative;
+    z-index: 901;
+  }
+}
+.header-menu {
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .header-menu {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    left: 30vw;
+    top: 50px;
+    width: 40vw;
+  }
+}
+.header-menu__anchor {
+  text-decoration: none;
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  color: #fff;
+}
+
+.header-menu__anchor:hover {
+  color: #D41443;
+}
+
 .header-top__buy {
   display: none;
 }
@@ -304,6 +357,21 @@ body {
     position: absolute;
     top: 38px;
     right: 1%;
+    z-index: 900;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-top__buy {
+    display: inline-block;
+    width: 160px;
+    height: 44px;
+    border-radius: 22px;
+    background-color: #fff;
+    border: none;
+    margin: 0 auto;
+    position: absolute;
+    top: 38px;
+    right: 8%;
     z-index: 900;
   }
 }
@@ -330,6 +398,22 @@ body {
   padding-bottom: 20px;
 }
 
+@media screen and (min-width: 767px) {
+  .hero-header__topic {
+    width: 162px;
+    padding-left: 34px;
+    padding-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-header__topic {
+    position: absolute;
+    width: 277px;
+    margin-left: 115px;
+    padding-left: 0;
+    top: 150px;
+  }
+}
 .header-topic__p {
   font-family: "Titan One";
   font-style: normal;
@@ -341,6 +425,31 @@ body {
   z-index: 903;
 }
 
+@media screen and (min-width: 767px) {
+  .header-topic__p {
+    font-family: "Titan One";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 30px;
+    color: #fff;
+    position: relative;
+    z-index: 903;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-topic__p {
+    font-family: "Titan One";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 38px;
+    line-height: 43.51px;
+    letter-spacing: 4%;
+    color: #fff;
+    position: relative;
+    z-index: 903;
+  }
+}
 .header-topic__span {
   font-family: "Titan One";
   font-style: normal;
@@ -352,6 +461,32 @@ body {
   z-index: 903;
 }
 
+@media screen and (min-width: 767px) {
+  .header-topic__span {
+    font-family: "Titan One";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 34px;
+    line-height: 30.77px;
+    letter-spacing: 4%;
+    color: #D41443;
+    position: relative;
+    z-index: 903;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-topic__span {
+    font-family: "Titan One";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 58px;
+    line-height: 52.49px;
+    letter-spacing: 4%;
+    color: #D41443;
+    position: relative;
+    z-index: 903;
+  }
+}
 .hero-header__buttons {
   position: relative;
   bottom: 110px;
@@ -361,6 +496,13 @@ body {
   .hero-header__buttons {
     position: relative;
     bottom: 65px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-header__buttons {
+    position: relative;
+    bottom: 30px;
+    left: 95px;
   }
 }
 .hero-button__product {
@@ -373,6 +515,28 @@ body {
   z-index: 902;
 }
 
+@media screen and (min-width: 767px) {
+  .hero-button__product {
+    border-radius: 20px;
+    width: 61px;
+    height: 24px;
+    border: none;
+    margin-left: 20px;
+    position: relative;
+    z-index: 902;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-button__product {
+    border-radius: 20px;
+    width: 104px;
+    height: 40px;
+    border: none;
+    margin-left: 20px;
+    position: relative;
+    z-index: 902;
+  }
+}
 .hero-button__product:hover {
   background: #D41443;
 }
@@ -386,6 +550,26 @@ body {
   z-index: 903;
 }
 
+@media screen and (min-width: 767px) {
+  .hero-button__how {
+    border-radius: 20px;
+    width: 82px;
+    height: 24px;
+    border: none;
+    position: relative;
+    z-index: 903;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-button__how {
+    border-radius: 20px;
+    width: 138px;
+    height: 40px;
+    border: none;
+    position: relative;
+    z-index: 903;
+  }
+}
 .hero-button__how:hover {
   background: #D41443;
 }
@@ -406,6 +590,40 @@ body {
   height: 100%;
 }
 
+@media screen and (min-width: 767px) {
+  .hero-button__link {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 10px;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #D41443;
+    width: 100%;
+    height: 100%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-button__link {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #D41443;
+    width: 100%;
+    height: 100%;
+  }
+}
 .hero-button__link:hover {
   color: #fff;
 }
@@ -437,9 +655,31 @@ body {
     width: 35px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .header-eat__number {
+    font-family: "Titan One";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 46px;
+    line-height: 52.67px;
+    text-align: right;
+    letter-spacing: 4%;
+    color: #D41443;
+    position: absolute;
+    z-index: 900;
+    bottom: 370px;
+    right: 100px;
+    width: 54px;
+  }
+}
 @media screen and (min-width: 767px) {
   .--cafes {
     margin-bottom: 50px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .--cafes {
+    margin-bottom: 80px;
   }
 }
 @media screen and (min-width: 767px) {
@@ -457,11 +697,33 @@ body {
     width: 100%;
   }
 }
+@media screen and (min-width: 1200px) {
+  .header-eat__span {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: normal;
+    text-align: right;
+    color: #fff;
+    position: absolute;
+    left: 0;
+    width: 100%;
+  }
+}
 @media screen and (min-width: 767px) {
   .--trucks-span {
     width: 55px;
     text-align: left;
     margin-left: -7px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .--trucks-span {
+    width: 78px;
+    text-align: left;
+    margin-left: -17px;
   }
 }
 .cafe-circle {
@@ -477,6 +739,17 @@ body {
     z-index: -1;
   }
 }
+@media screen and (min-width: 1200px) {
+  .cafe-circle {
+    position: absolute;
+    top: -10px;
+    right: -1.5vw;
+    display: flex;
+    z-index: -1;
+    width: 30px;
+    height: 30px;
+  }
+}
 .truck-circle {
   display: none;
 }
@@ -488,6 +761,16 @@ body {
     right: -1vw;
     display: flex;
     z-index: -1;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .truck-circle {
+    position: absolute;
+    top: -10px;
+    right: -1.5vw;
+    display: flex;
+    z-index: -1;
+    width: 30px;
   }
 }
 .hero-header__images {
@@ -516,6 +799,18 @@ body {
     left: 40vw;
   }
 }
+@media screen and (min-width: 1200px) {
+  .hero-header__icediv {
+    position: absolute;
+    background-image: url("/images/elipse-mobile.png");
+    background-size: 538px;
+    background-repeat: no-repeat;
+    width: 50vw;
+    height: 538px;
+    top: 70px;
+    left: 40vw;
+  }
+}
 .header-bottom__icecream {
   width: 171px;
   height: 410px;
@@ -531,6 +826,14 @@ body {
     margin-top: 32px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .header-bottom__icecream {
+    width: 236px;
+    height: 557px;
+    margin-left: 120px;
+    margin-top: 38px;
+  }
+}
 .hero-header__milkdiv {
   display: none;
 }
@@ -542,6 +845,27 @@ body {
     z-index: 920;
     left: 2%;
     top: 260px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-header__milkdiv {
+    display: inline-block;
+    position: absolute;
+    z-index: 920;
+    left: 4%;
+    top: 450px;
+  }
+}
+@media screen and (min-width: 767px) {
+  .header-bottom__milk {
+    width: 124px;
+    height: 126px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-bottom__milk {
+    width: 186px;
+    height: 191px;
   }
 }
 .hero-header__tastydiv {
@@ -557,16 +881,37 @@ body {
     top: 266px;
   }
 }
-.lorem {
-  display: none;
+@media screen and (min-width: 1200px) {
+  .hero-header__tastydiv {
+    display: inline-block;
+    position: absolute;
+    z-index: 920;
+    right: 2%;
+    top: 433px;
+  }
 }
-
-.rodzic {
+@media screen and (min-width: 767px) {
+  .header-bottom__tasty {
+    height: 133px;
+    width: 168px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-bottom__tasty {
+    height: 232px;
+    width: 293px;
+  }
+}
+.header-span {
   position: absolute;
 }
 
+.header-span__lorem {
+  display: none;
+}
+
 @media screen and (min-width: 767px) {
-  .lorem {
+  .header-span__lorem {
     display: flex;
     text-align: left;
     top: 310px;
@@ -580,6 +925,43 @@ body {
     font-size: 8px;
     line-height: 150%;
     color: #fff;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-span__lorem {
+    display: flex;
+    text-align: left;
+    margin-left: 60px;
+    top: 510px;
+    width: 200px;
+    height: 78px;
+    position: relative;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140%;
+    color: #fff;
+  }
+}
+.header-span__arrow {
+  display: none;
+}
+
+@media screen and (min-width: 767px) {
+  .header-span__arrow {
+    display: flex;
+    position: relative;
+    top: 315px;
+    left: 14.25vw;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-span__arrow {
+    display: flex;
+    position: relative;
+    top: 525px;
+    margin-left: 60px;
   }
 }
 .nav-container {
@@ -713,6 +1095,11 @@ body {
   }
   .nav-container .nav-toggle:after {
     box-shadow: 0 -6.6666666667px 0 0 #D41443;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav-container {
+    display: none;
   }
 }
 .nav-items__button {
