--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,21 +1,18 @@
-//Utils
-@import "./utils/variables";
-@import "./utils/visually-hidden";
 
-//General
-@import "./general/general-styles";
+@import './utils/variables';
+@import './utils/visually-hidden';
+
+@import './general/general-styles';
 @import './base/container';
 
-//Hero
-@import "./_hamburger/hamburger";
+@import './_hamburger/hamburger';
 @import './header-hero';
 @import './_hamburger/hamburger';
 
-//Products
-@import "./products/_products-heading.scss";
-@import "./products/_products-list.scss";
+@import './products/_products-heading';
+@import './products/_products-list';
 
-//About
+
 @import './about';
 @import './advantages';
 @import './gallery';
