--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -63,32 +63,34 @@
     }
 }
 
-.header-menu{display: none;}
+.header-menu {
+    display: none;
+}
 
-    @media screen and(min-width: 1200px) {
-        .header-menu {
-                display: flex;
-                justify-content: space-between;
-                position: absolute;
-                left: 30vw;
-                top: 50px;
-                width: 40vw;
-            }
+@media screen and(min-width: 1200px) {
+    .header-menu {
+        display: flex;
+        justify-content: space-between;
+        position: absolute;
+        left: 30vw;
+        top: 50px;
+        width: 40vw;
     }
+}
 
-    .header-menu__anchor{
-        text-decoration: none;
-        font-family: 'DM Sans';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 21px;
-            color: #fff;
-    }
+.header-menu__anchor {
+    text-decoration: none;
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    color: #fff;
+}
 
-        .header-menu__anchor:hover{
-            color: #D41443;
-        }
+.header-menu__anchor:hover {
+    color: #D41443;
+}
 
 .header-top__buy {
     display: none;
@@ -150,12 +152,12 @@
     padding-bottom: 20px;
 }
 
-@media screen and(min-width: 767px){
+@media screen and(min-width: 767px) {
     .hero-header__topic {
-            width: 162px;
-            padding-left: 34px;
-            padding-bottom: 20px;
-        }
+        width: 162px;
+        padding-left: 34px;
+        padding-bottom: 20px;
+    }
 }
 
 @media screen and(min-width: 1200px) {
@@ -164,7 +166,7 @@
         width: 277px;
         margin-left: 115px;
         padding-left: 0;
-top: 150px;
+        top: 150px;
     }
 }
 
@@ -180,7 +182,8 @@ top: 150px;
 }
 
 
-@media screen and(min-width: 767px) {.header-topic__p {
+@media screen and(min-width: 767px) {
+    .header-topic__p {
         font-family: 'Titan One';
         font-style: normal;
         font-weight: 400;
@@ -189,8 +192,11 @@ top: 150px;
         color: #fff;
         position: relative;
         z-index: 903;
-    }}
-@media screen and(min-width: 1200px) {.header-topic__p {
+    }
+}
+
+@media screen and(min-width: 1200px) {
+    .header-topic__p {
         font-family: 'Titan One';
         font-style: normal;
         font-weight: 400;
@@ -200,7 +206,8 @@ top: 150px;
         color: #fff;
         position: relative;
         z-index: 903;
-    }}
+    }
+}
 
 .header-topic__span {
     font-family: 'Titan One';
@@ -213,7 +220,8 @@ top: 150px;
     z-index: 903;
 }
 
-@media screen and(min-width: 767px) {.header-topic__span {
+@media screen and(min-width: 767px) {
+    .header-topic__span {
         font-family: 'Titan One';
         font-style: normal;
         font-weight: 400;
@@ -223,8 +231,11 @@ top: 150px;
         color: #D41443;
         position: relative;
         z-index: 903;
-    }}
-@media screen and(min-width: 1200px) {.header-topic__span {
+    }
+}
+
+@media screen and(min-width: 1200px) {
+    .header-topic__span {
         font-family: 'Titan One';
         font-style: normal;
         font-weight: 400;
@@ -234,7 +245,8 @@ top: 150px;
         color: #D41443;
         position: relative;
         z-index: 903;
-    }}
+    }
+}
 
 .hero-header__buttons {
     position: relative;
@@ -267,7 +279,8 @@ top: 150px;
     z-index: 902;
 }
 
-@media screen and(min-width: 767px) {.hero-button__product {
+@media screen and(min-width: 767px) {
+    .hero-button__product {
         border-radius: 20px;
         width: 61px;
         height: 24px;
@@ -275,8 +288,11 @@ top: 150px;
         margin-left: 20px;
         position: relative;
         z-index: 902;
-    }}
-@media screen and(min-width: 1200px) {.hero-button__product {
+    }
+}
+
+@media screen and(min-width: 1200px) {
+    .hero-button__product {
         border-radius: 20px;
         width: 104px;
         height: 40px;
@@ -284,7 +300,8 @@ top: 150px;
         margin-left: 20px;
         position: relative;
         z-index: 902;
-    }}
+    }
+}
 
 .hero-button__product:hover {
     background: #D41443;
@@ -299,22 +316,28 @@ top: 150px;
     position: relative;
     z-index: 903;
 }
-@media screen and(min-width: 767px) {.hero-button__how {
+
+@media screen and(min-width: 767px) {
+    .hero-button__how {
         border-radius: 20px;
         width: 82px;
         height: 24px;
         border: none;
         position: relative;
         z-index: 903;
-    }}
-@media screen and(min-width: 1200px) {.hero-button__how {
+    }
+}
+
+@media screen and(min-width: 1200px) {
+    .hero-button__how {
         border-radius: 20px;
         width: 138px;
         height: 40px;
         border: none;
         position: relative;
         z-index: 903;
-    }}
+    }
+}
 
 .hero-button__how:hover {
     background: #D41443;
@@ -336,8 +359,8 @@ top: 150px;
     height: 100%;
 }
 
-@media screen and(min-width: 767px){
-.hero-button__link {
+@media screen and(min-width: 767px) {
+    .hero-button__link {
         font-family: 'DM Sans';
         font-style: normal;
         font-weight: 400;
@@ -353,7 +376,9 @@ top: 150px;
         height: 100%;
     }
 }
-@media screen and(min-width: 1200px) {.hero-button__link {
+
+@media screen and(min-width: 1200px) {
+    .hero-button__link {
         font-family: 'DM Sans';
         font-style: normal;
         font-weight: 400;
@@ -367,7 +392,8 @@ top: 150px;
         color: #D41443;
         width: 100%;
         height: 100%;
-    }}
+    }
+}
 
 .hero-button__link:hover {
     color: #fff;
@@ -560,16 +586,16 @@ top: 150px;
 }
 
 @media screen and(min-width: 1200px) {
-        .hero-header__icediv {
-                position: absolute;
-                background-image: url("/images/elipse-mobile.png");
-                background-size: 538px;
-                background-repeat: no-repeat;
-                width: 50vw;
-                height: 538px;
-                top: 70px;
-                left: 40vw;
-            }
+    .hero-header__icediv {
+        position: absolute;
+        background-image: url("/images/elipse-mobile.png");
+        background-size: 538px;
+        background-repeat: no-repeat;
+        width: 50vw;
+        height: 538px;
+        top: 70px;
+        left: 40vw;
+    }
 }
 
 .header-bottom__icecream {
@@ -623,15 +649,15 @@ top: 150px;
 
 @media screen and(min-width: 767px) {
     .header-bottom__milk {
-width: 124px;
-height: 126px;
+        width: 124px;
+        height: 126px;
     }
 }
 
 @media screen and(min-width: 1200px) {
     .header-bottom__milk {
-width: 186px;
-    height: 191px;
+        width: 186px;
+        height: 191px;
     }
 }
 
@@ -667,9 +693,9 @@ width: 186px;
 }
 
 @media screen and(min-width: 1200px) {
-    .header-bottom__tasty{
-                height: 232px;
-                    width: 293px;
+    .header-bottom__tasty {
+        height: 232px;
+        width: 293px;
     }
 }
 
