usuniecie zbednego kodu

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -43,11 +43,11 @@
     <!-- food trucks cafes -->
     <section class="hero-header__eat header-eat">
         <div class="header-eat__number --cafes">
-            <p>16</p><span class="header-eat__span">cafes</span><img class="cafe-circle"
+            <p>16</p><span class="header-eat__span">cafes</span><img class="header-eat__cafecircle"
                 src="../src/images/number-circle.png">
         </div>
         <div class="header-eat__number --foodtrucks">
-            <p>23</p><span class="header-eat__span --trucks-span">food trucks</span><img class="truck-circle"
+            <p>23</p><span class="header-eat__span --trucks-span">food trucks</span><img class="header-eat__truckcircle"
                 src="../src/images/number-circle.png">
         </div>
     </section>
