--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -1,3 +1,5 @@
+//hero header container//
+
 .hero-header {
     display: flex;
     flex-direction: column;
@@ -9,10 +11,6 @@
 
 @media screen and(min-width: 767px) {
     .hero-header {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        background-color: var(--product-pink);
         height: 399px;
         width: 100%;
     }
@@ -20,15 +18,15 @@
 
 @media screen and(min-width: 1200px) {
     .hero-header {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        background-color: var(--product-pink);
         height: 665px;
         width: 100%;
     }
 }
 
+//hero header container//
+
+
+// header top //
 .header-top {
     display: flex;
     justify-content: space-between;
@@ -54,12 +52,8 @@
 
 @media screen and(min-width: 1200px) {
     .header-top__logo {
-        width: 199px;
-        height: 50px;
         padding-left: 46px;
         padding-top: 37px;
-        position: relative;
-        z-index: 901;
     }
 }
 
@@ -114,17 +108,9 @@
 
 @media screen and(min-width: 1200px) {
     .header-top__buy {
-        display: inline-block;
         width: 160px;
         height: 44px;
-        border-radius: 22px;
-        background-color: #fff;
-        border: none;
-        margin: 0 auto;
-        position: absolute;
-        top: 38px;
         right: 8%;
-        z-index: 900;
     }
 }
 
@@ -146,6 +132,10 @@
     }
 }
 
+// header top //
+
+
+//header topic //
 .hero-header__topic {
     width: 218px;
     padding-left: 20px;
@@ -184,28 +174,17 @@
 
 @media screen and(min-width: 767px) {
     .header-topic__p {
-        font-family: 'Titan One';
-        font-style: normal;
-        font-weight: 400;
         font-size: 22px;
         line-height: 30px;
-        color: #fff;
-        position: relative;
-        z-index: 903;
     }
 }
 
 @media screen and(min-width: 1200px) {
     .header-topic__p {
-        font-family: 'Titan One';
-        font-style: normal;
-        font-weight: 400;
         font-size: 38px;
         line-height: 43.51px;
         letter-spacing: 4%;
         color: #fff;
-        position: relative;
-        z-index: 903;
     }
 }
 
@@ -222,47 +201,36 @@
 
 @media screen and(min-width: 767px) {
     .header-topic__span {
-        font-family: 'Titan One';
-        font-style: normal;
-        font-weight: 400;
         font-size: 34px;
         line-height: 30.77px;
         letter-spacing: 4%;
-        color: #D41443;
-        position: relative;
-        z-index: 903;
     }
 }
 
 @media screen and(min-width: 1200px) {
     .header-topic__span {
-        font-family: 'Titan One';
-        font-style: normal;
-        font-weight: 400;
         font-size: 58px;
         line-height: 52.49px;
         letter-spacing: 4%;
         color: #D41443;
-        position: relative;
-        z-index: 903;
     }
 }
+//header topic //
 
+// header buttons below topic //
 .hero-header__buttons {
     position: relative;
-    bottom: 110px;
+    bottom: 150px;
 }
 
 @media screen and(min-width: 767px) {
     .hero-header__buttons {
-        position: relative;
         bottom: 65px;
     }
 }
 
 @media screen and(min-width: 1200px) {
     .hero-header__buttons {
-        position: relative;
         bottom: 30px;
         left: 95px;
     }
@@ -281,25 +249,16 @@
 
 @media screen and(min-width: 767px) {
     .hero-button__product {
-        border-radius: 20px;
-        width: 61px;
-        height: 24px;
-        border: none;
-        margin-left: 20px;
-        position: relative;
-        z-index: 902;
+        margin-left: 30px;
     }
 }
 
 @media screen and(min-width: 1200px) {
     .hero-button__product {
-        border-radius: 20px;
         width: 104px;
         height: 40px;
         border: none;
         margin-left: 20px;
-        position: relative;
-        z-index: 902;
     }
 }
 
@@ -317,25 +276,10 @@
     z-index: 903;
 }
 
-@media screen and(min-width: 767px) {
-    .hero-button__how {
-        border-radius: 20px;
-        width: 82px;
-        height: 24px;
-        border: none;
-        position: relative;
-        z-index: 903;
-    }
-}
-
 @media screen and(min-width: 1200px) {
     .hero-button__how {
-        border-radius: 20px;
         width: 138px;
         height: 40px;
-        border: none;
-        position: relative;
-        z-index: 903;
     }
 }
 
@@ -359,45 +303,20 @@
     height: 100%;
 }
 
-@media screen and(min-width: 767px) {
-    .hero-button__link {
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 8px;
-        line-height: 10px;
-        text-decoration: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        color: #D41443;
-        width: 100%;
-        height: 100%;
-    }
-}
-
 @media screen and(min-width: 1200px) {
     .hero-button__link {
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 400;
         font-size: 14px;
         line-height: 18px;
-        text-decoration: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        color: #D41443;
-        width: 100%;
-        height: 100%;
     }
 }
 
 .hero-button__link:hover {
     color: #fff;
 }
+
+// header buttons below topic //
+
+// header cafes foodtrucks //
 
 .hero-header__eat {
     display: none;
@@ -430,16 +349,10 @@
 
 @media screen and(min-width: 1200px) {
     .header-eat__number {
-        font-family: 'Titan One';
-        font-style: normal;
-        font-weight: 400;
         font-size: 46px;
         line-height: 52.67px;
         text-align: right;
         letter-spacing: 4%;
-        color: #D41443;
-        position: absolute;
-        z-index: 900;
         bottom: 370px;
         right: 100px;
         width: 54px;
@@ -476,17 +389,8 @@
 
 @media screen and(min-width: 1200px) {
     .header-eat__span {
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 400;
         font-size: 14px;
         line-height: 18px;
-        letter-spacing: normal;
-        text-align: right;
-        color: #fff;
-        position: absolute;
-        left: 0;
-        width: 100%;
     }
 }
 
@@ -501,17 +405,16 @@
 @media screen and(min-width: 1200px) {
     .--trucks-span {
         width: 78px;
-        text-align: left;
         margin-left: -17px;
     }
 }
 
-.cafe-circle {
+.header-eat__cafecircle {
     display: none;
 }
 
 @media screen and(min-width: 767px) {
-    .cafe-circle {
+    .header-eat__cafecircle {
         position: absolute;
         top: 0px;
         right: -1vw;
@@ -521,23 +424,20 @@
 }
 
 @media screen and(min-width: 1200px) {
-    .cafe-circle {
-        position: absolute;
+    .header-eat__cafecircle {
         top: -10px;
         right: -1.5vw;
-        display: flex;
-        z-index: -1;
         width: 30px;
         height: 30px;
     }
 }
 
-.truck-circle {
+.headet-eat__truckcircle {
     display: none;
 }
 
 @media screen and(min-width: 767px) {
-    .truck-circle {
+    .header-eat__truckcircle {
         position: absolute;
         top: 0px;
         right: -1vw;
@@ -547,16 +447,17 @@
 }
 
 @media screen and(min-width: 1200px) {
-    .truck-circle {
-        position: absolute;
+    .header-eat__truckcircle {
         top: -10px;
         right: -1.5vw;
-        display: flex;
-        z-index: -1;
         width: 30px;
     }
 }
 
+// header cafes foodtrucks //
+
+
+// header images //
 .hero-header__images {
     width: 100%;
     position: absolute;
@@ -576,9 +477,7 @@
 @media screen and(min-width: 767px) {
     .hero-header__icediv {
         position: absolute;
-        background-image: url("/images/elipse-mobile.png");
         background-size: 324px;
-        background-repeat: no-repeat;
         width: 50vw;
         top: 30px;
         left: 40vw;
@@ -588,9 +487,7 @@
 @media screen and(min-width: 1200px) {
     .hero-header__icediv {
         position: absolute;
-        background-image: url("/images/elipse-mobile.png");
         background-size: 538px;
-        background-repeat: no-repeat;
         width: 50vw;
         height: 538px;
         top: 70px;
@@ -699,6 +596,9 @@
     }
 }
 
+// header images //
+
+// header lorem //
 .header-span {
     position: absolute;
 }
@@ -728,19 +628,12 @@
 
 @media screen and(min-width: 1200px) {
     .header-span__lorem {
-        display: flex;
-        text-align: left;
         margin-left: 60px;
         top: 510px;
         width: 200px;
         height: 78px;
-        position: relative;
-        font-family: 'DM Sans';
-        font-style: normal;
-        font-weight: 400;
         font-size: 14px;
         line-height: 140%;
-        color: #fff;
     }
 }
 
@@ -759,9 +652,8 @@
 
 @media screen and(min-width: 1200px) {
     .header-span__arrow {
-        display: flex;
-        position: relative;
         top: 525px;
         margin-left: 60px;
     }
 }
+// header lorem //
