podmiana zdjecia/poprawa kodu

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,4 +1,5 @@
 <header class="hero-header">
+    <title>Ice cream made with passion</title>
     <section class="hero-header__top header-top">
         <div class="header-top__logo"><img class=header-top__img src="../src/images/logo 1.png"></div>
         <ul class="hero-header__menu header-menu">
