--- a/src/sass/_hamburger/_hamburger.scss
+++ b/src/sass/_hamburger/_hamburger.scss
@@ -75,8 +75,6 @@ $toggleColor: #fff;
         }
     }
 
-
-
     .nav-items {
         position: absolute;
         visibility: hidden;
@@ -178,14 +176,17 @@ $toggleColor: #fff;
     }
 }
 
+
+// brak hamburgera //
 @media screen and(min-width: 1200px) {
     .nav-container {
         display: none;
     }
 }
+// brak hamburgera //
 
 
-
+// list w hamburgerze //
 .nav-items__button {
     width: 209px;
     height: 44px;
@@ -239,3 +240,5 @@ $toggleColor: #fff;
 .nav-item__anchor:hover {
     color: #D41443;
 }
+
+// list w hamburgerze //
